k8s-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webchat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webchat
  template:
    metadata:
      labels:
        app: webchat
    spec:
      containers:
      - name: webchat-container
        image: vannguyen23/webchat-backend:v17
        ports:
        - containerPort: 8081
        # Cấu hình biến môi trường 
---

# Mở cổng 
apiVersion: v1
kind: Service
metadata:
  name: webchat-service
spec:
  type: NodePort #hoặc LoadBalancer
  selector:
    app: webchat
  ports:
    - protocol: TCP
      port: 80       # Cổng bên ngoài 
      targetPort: 8081 # Cổng của Container Spring Boot
      nodePort: 30001
